2-vpc.tf
# vpc
resource "google_compute_network" "main" {
  name                                      = "main"
  routing_mode                              = "REGIONAL"
  auto_create_subnetworks                   = false
  mtu                                       = 1460
  delete_default_routes_on_create           = false
  network_firewall_policy_enforcement_order = "BEFORE_CLASSIC_FIREWALL"
}
